[package]
name = "efferve"
version = "0.1.0"
authors = ["shockham <samuel.hockham@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
infuse = "0.4"
wasm-bindgen = "0.2.43"
instant = { version = "0.1", features = [ "wasm-bindgen", "now" ] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Window',
]
